@@ -1,5 +1,7 @@
-# Ignore Gradle project-specific cache directory
+.classpath
+.project
+.settings
 .gradle
-
-# Ignore Gradle build output directory
+bin
 build
+commit.md
